# journal-claw

./: .gitignore  .impeccable.md  CHANGELOG-0420-0424.md  CHANGELOG.md  DESIGN.md  PORTING-PLAN.md  README.cn.md  README.md  eslint.config.js  findings.md  index.html  lefthook.yml  package-lock.json  package.json  playwright.config.ts  progress.md  release-please-config.json  settings.html  task_plan.md  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  settings.json
src-tauri/icons/: icon.icns
src-tauri/resources/workspace-template/: CLAUDE.md
src-tauri/resources/workspace-template/.claude/: CLAUDE.md  settings.json
src-tauri/resources/workspace-template/identity/: 测试-张三.md
src-tauri/src/: ai_processor.rs  audio_pipeline.rs  audio_process.rs  auto_dream.rs  auto_lint.rs  brainstorm.rs  compact.rs  config.rs  conversation.rs  feishu_bridge.rs  identity.rs  journal.rs  main.rs  materials.rs  permissions.rs  permissions_ffi.m  recorder.rs  recordings.rs  skills.rs  speaker_profiles.rs  todos.rs  transcription.rs  types.rs  work_queue.rs  workspace.rs  workspace_settings.rs
src-tauri/src/llm/: anthropic.rs  bash_tool.rs  enable_skill.rs  loop_detector.rs  mod.rs  model_quirks.rs  openai_compat.rs  prompt.rs  retry.rs  sse_parser.rs  task_tool.rs  tool_loop.rs  types.rs
src-tauri/src/llm/fs_tools/: copy.rs  edit.rs  glob.rs  grep.rs  mkdir.rs  mod.rs  move_file.rs  read.rs  (+3 more)
src-tauri/swift-cli/: Package.resolved  Package.swift
src-tauri/swift-cli/Sources/: Info.plist  main.swift
(+340 files in other folders)
