[package]
name = "daynote"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.17"
hound = "3.5"
chrono = { version = "0.4", features = ["clock"] }
mp4ameta = "0.13"
# tauri-plugin-context-menu = "0.8"  # Removed: all published 0.x versions require tauri v1; will add git dependency in Task 5

