[package]
name = "journal"
version = "0.5.0"
description = "谨迹 — 知识工作者的日志助手"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.17"
hound = "3.5"
chrono = { version = "0.4", features = ["clock"] }
mp4ameta = "0.13"
nnnoiseless = "0.5"
reqwest = { version = "0.12", features = ["multipart", "json"] }
rubato = "0.15"
tokio = { version = "1", features = ["full"] }
gray_matter = "0.2"
tauri-plugin-clipboard = "2"
tauri-plugin-dialog = "2"
libc = "0.2.183"
